--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout> Hello world! </Layout>
+<Layout> 
+
+    <div class="flex flex-col gap-4">
+        <div>
+            <h2>Top Movies</h2>
+            </TopMoviesList />
+        </div>
+    </div>
+</Layout>
