--- a/src/components/top-movies/TopMovieCard.astro
+++ b/src/components/top-movies/TopMovieCard.astro
@@ -1,25 +1,29 @@
 ---
-interface Props {
-  title: string;
-  director: string;
-  date: string;
-  image: string;
+import { getCollection } from "astro:content";
+
+export interface Props {
+    title: string;
+    date: string;
+    image: string;
+    slug: string;
 }
 
-const { title, director, date, image } = Astro.props as Props;
+const { date, image, title, slug } = Astro.props;
 ---
+
 <article class="flex flex-row gap-2 h-full items-center">
-    <div class="min-h-[300px] aspect-[9/16] object-fill">
-      <img
-        src={image}
-        alt={title}
-        class="aspect-[9/16] object-contain max-h-[300px]"
-      />
+    <div class="min-h-[300px] aspect-[9/16]">
+        <img
+                src={image}
+                alt={title}
+                class="aspect-[9/16] object-contain max-h-[300px]"
+
+        />
     </div>
     <div class="flex flex-col gap-2">
-      <h3 class="font-bold text-xl">{title}</h3>
-  
-      <p class="text-sm text-gray-500">{date}</p>
-  
+        <h3 class="font-bold text-xl">{title}</h3>
+
+        <p class="text-sm text-gray-500">{date}</p>
+
     </div>
-  </article>
+</article>
