--- a/src/components/top-movies/TopMoviesList.astro
+++ b/src/components/top-movies/TopMoviesList.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 import TopMovieCard from "./TopMovieCard.astro";
 
 const movies = await getCollection("movies");
+
 ---
 
 <section class="grid grid-cols-4 gap-2">
@@ -13,6 +14,7 @@ const movies = await getCollection("movies");
       director={movie.data.director}
       date={movie.data.date}
         image={movie.data.image}
+      slug={movie.slug}
         
       />
     ))
