--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import TopMoviesList from "../components/top-movies/TopMoviesList.astro";
 ---
 
 <Layout> 
