--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,22 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import TopMoviesList from "../components/top-movies/TopMoviesList.astro";
+import RandomMovieList from "../components/random-movies/RandomMovieList.astro";
 ---
 
 <Layout> 
 
     <div class="flex flex-col gap-4">
         <div>
-            <h2>Top Movies</h2>
-            </TopMoviesList />
+            <h2>Top Movies -> to be reviewed</h2>
+            <!--</TopMoviesList /> -->
         </div>
+        <di>
+            <h2>Random Movies</h2>
+            <p>Random movies from the API</p>
+            <section class="grid grid-cols-4 gap-2">
+                <RandomMovieList />
+            </section>
+        </di>
     </div>
 </Layout>
